# QGetPrivateBytes

./: .gitignore  .qmake.stash  CMakeLists.txt  QGetPrivateByte_Zh_cn.ts  QGetPrivateBytes.pro  QGetPrivateBytes.sln  QGetPrivateBytes.vcxproj  QGetPrivateBytes.vcxproj.filters  README.md  global.h  log.csv  logobject.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotobject.cpp  plotobject.h  qcustomplot.h  ui_mainwindow.h
src/: logobject.cpp  plotobject.h
